--- a/index.html
+++ b/index.html
@@ -4,8 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Landing</h1>
+    <nav class="navbar">
+        <div class="logo">Header Logo</div>
+        <div class="menu">
+            <ul>
+                <li><a href="http://" target="_blank" rel="noopener noreferrer"></a>header link 1</li>
+                <li>header link 2</li>
+                <li>header link 3</li>
+            </ul>
+        </div>
+    </nav>
+
+    <header>
+        <div class="hero">
+            <div class="hero-text">
+                <h1>This website is <br> awesome</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <button class="hero-button">Sign Up</button>
+            </div>
+            <div class="hero-img">
+                <img src="images/image.jpg" alt="">
+            </div>
+        </div>
+    </header>
+
+    <div class="container1">
+        <h1>Some Random Information</h1>
+        <div class="cards-container">
+            <div class="card-text">
+                <div class="cards"></div>
+                <p>Lorem ipsum dolor </p>
+            </div>
+            <div class="card-text">
+                <div class="cards"></div>
+                <p>Lorem ipsum dolor </p>
+            </div>
+            <div class="card-text">
+                <div class="cards"></div>
+                <p>Lorem ipsum dolor</p>
+            </div>
+            <div class="card-text">
+                <div class="cards"></div>
+                <p>Lorem ipsum dolor </p>
+            </div>
+            
+        </div>
+    </div>
+    
 </body>
 </html>
