--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="logo">Header Logo</div>
         <div class="menu">
             <ul>
-                <li><a href="http://" target="_blank" rel="noopener noreferrer"></a>header link 1</li>
+                <li><a href="#" target="_blank" rel="noopener noreferrer"></a>header link 1</li>
                 <li>header link 2</li>
                 <li>header link 3</li>
             </ul>
@@ -23,7 +23,7 @@
             <div class="hero-text">
                 <h1>This website is <br> awesome</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <button class="hero-button">Sign Up</button>
+                <button class="boton">Sign Up</button>
             </div>
             <div class="hero-img">
                 <img src="images/image.jpg" alt="">
@@ -34,24 +34,43 @@
     <div class="container1">
         <h1>Some Random Information</h1>
         <div class="cards-container">
-            <div class="card-text">
+            <div>
                 <div class="cards"></div>
-                <p>Lorem ipsum dolor </p>
+                <p class="card-text"> Lorem ipsum dolor Lorem ipsum dolor </p>
             </div>
-            <div class="card-text">
+            <div>
                 <div class="cards"></div>
-                <p>Lorem ipsum dolor </p>
+                <p class="card-text">Lorem ipsum dolor Lorem ipsum dolor</p>
             </div>
-            <div class="card-text">
+            <div>
                 <div class="cards"></div>
-                <p>Lorem ipsum dolor</p>
+                <p class="card-text">Lorem ipsum dolor Lorem ipsum dolor</p>
             </div>
-            <div class="card-text">
+            <div>
                 <div class="cards"></div>
-                <p>Lorem ipsum dolor </p>
+                <p class="card-text">Lorem ipsum dolor Lorem ipsum dolor</p>
             </div>
         </div>
     </div>
+
+    <div class="quote">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia nulla obcaecati optio cum tempora commodi et eligendi doloremque laborum. Nemo praesentium dolore consequuntu.</p>
+        <h2>-Lorem ipsum dolor</h2>
+    </div>
+    
+    <div>
+        <div class="action">
+            <div>
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button</p>
+            </div>
+            <button class="boton2">Sign Up</button>
+        </div>
+    </div>
+
+    <footer>
+        Copyright @ Edson Badilla 2023
+    </footer>
     
 </body>
 </html>
